--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Maciej Pacholak</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -36,13 +36,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#about">O mnie</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+            <a class="nav-link js-scroll-trigger" href="#projects">Projekty</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#signup">Kontakt</a>
           </li>
         </ul>
       </div>
@@ -70,7 +70,6 @@
             <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
         </div>
       </div>
-      <img src="img/ipad.png" class="img-fluid" alt="">
     </div>
   </section>
 
@@ -130,7 +129,7 @@
     </div>
   </section>
 
-  <!-- Signup Section -->
+  <!-- Signup Section
   <section id="signup" class="signup-section">
     <div class="container">
       <div class="row">
@@ -147,10 +146,10 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Contact Section -->
-  <section class="contact-section bg-black">
+  <section id="signup" class="contact-section bg-black">
     <div class="container">
 
       <div class="row">
@@ -158,13 +157,15 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Address</h4>
+              <i class="fab fa-linkedin text-primary mb-2"></i>
+              <h4 class="text-uppercase m-0">LinkedIn</h4>
               <hr class="my-4">
-              <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+              <div class="small text-black-50">
+              <a href="https://www.linkedin.com/in/maciej-pacholak/" target="_blank">linkedin.com/maciej-pacholak</a>
             </div>
           </div>
         </div>
+      </div>
 
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
@@ -172,9 +173,7 @@
               <i class="fas fa-envelope text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
-              <div class="small text-black-50">
-                <a href="#">hello@yourdomain.com</a>
-              </div>
+              <div class="small text-black-50">maciej.pacholak@onet.pl</div>
             </div>
           </div>
         </div>
@@ -182,16 +181,19 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <i class="fas fa-mobile-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Phone</h4>
+              <i class="fab fa-facebook text-primary mb-2"></i>
+              <h4 class="text-uppercase m-0">FACEBOOK</h4>
               <hr class="my-4">
-              <div class="small text-black-50">+1 (555) 902-8832</div>
+              <div class="small text-black-50">
+              <a href="https://www.facebook.com/maciek.pacholak" target="_blank">facebook.com/maciek.pacholak</a>
             </div>
           </div>
         </div>
       </div>
+ 
+      </div>
 
-      <div class="social d-flex justify-content-center">
+      <!-- <div class="social d-flex justify-content-center">
         <a href="#" class="mx-2">
           <i class="fab fa-twitter"></i>
         </a>
@@ -201,7 +203,7 @@
         <a href="#" class="mx-2">
           <i class="fab fa-github"></i>
         </a>
-      </div>
+      </div> -->
 
     </div>
   </section>
@@ -209,7 +211,7 @@
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy; Your Website 2019
+      Copyright &copy; Maciej Pacholak 2019
     </div>
   </footer>
 
