--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/grayscale.min.css" rel="stylesheet">
+  <link href="scss/grayscale.css" rel="stylesheet">
 
 </head>
 
@@ -53,9 +53,9 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
-        <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
+        <h1 class="mx-auto my-0 text-uppercase mb-5">Maciej PACHOLAK</h1>
+        <img src="img/maciek_avatar.jpg" alt="Avatar" >
+        <h2 class="text-white-50 mx-auto mt-5 mb-5">Software Developer.</h2>
       </div>
     </div>
   </header>
@@ -65,9 +65,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-          <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+          <h2 class="text-white mb-4">O mnie</h2>
+          <p class="text-white-50">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum fuga recusandae consequuntur facilis voluptatum quia beatae, ipsum similique distinctio veritatis quos omnis nostrum vero tempore! Sint totam repellendus dolor dicta.</p>
         </div>
       </div>
     </div>
