--- a/index.html
+++ b/index.html
@@ -49,16 +49,18 @@
     </div>
   </nav>
 
+ 
   <!-- Header -->
-  <header class="masthead">
-    <div class="container d-flex h-100 align-items-center">
+  <section class="masthead">
+    <div id="particles-js"></div>
+    <div style="position: relative; z-index: 50;" class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase mb-5">Maciej PACHOLAK</h1>
         <img src="img/maciek_avatar.jpg" alt="Avatar" >
         <h2 class="text-white-50 mx-auto mt-5 mb-5">Software Developer.</h2>
       </div>
     </div>
-  </header>
+  </section>
 
   <!-- About Section -->
   <section id="about" class="about-section text-center">
@@ -223,6 +225,8 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/grayscale.min.js"></script>
+  <script src="js/particles.js"></script>
+  <script src="js/app.js"></script>
 
 </body>
 
