fix: particles done

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
   </section>
 
   <!-- About Section -->
-  <section id="about" class="about-section text-center">
+  <section id="about" style="position: relative; z-index: 50;" class="about-section text-center">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">O mnie</h2>
+          <h2 class="text-white mb-4 mt-5">O mnie</h2>
           <p class="text-white-50">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum fuga recusandae consequuntur facilis voluptatum quia beatae, ipsum similique distinctio veritatis quos omnis nostrum vero tempore! Sint totam repellendus dolor dicta.</p>
         </div>
       </div>
@@ -75,7 +75,7 @@
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="projects-section bg-light">
+  <section id="projects" class="projects-section bg-light mt-5">
     <div class="container">
 
       <!-- Featured Project Row -->
