feat added carusel and adjustments

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Grayscale - Start Bootstrap Theme</title>
+  <title>Maciej Pacholak</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -39,7 +39,7 @@
             <a class="nav-link js-scroll-trigger" href="#about">O mnie</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Projekty</a>
+            <a class="nav-link js-scroll-trigger" href="#projects">Doświadczenie</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#signup">Kontakt</a>
@@ -76,77 +76,105 @@
 
   <!-- Projects Section -->
   <section id="projects" class="projects-section bg-light mt-5">
+
+      <div class="text-center mb-5 mt-5">
+          <h3>Czym się zajmuję :</h3>
+      </div>
+      <div class="additional-border"></div>
+
     <div class="container">
 
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-5 mb-lg-5">
-        <div class="col-xl-4 col-lg-7">
+        <div class="col-xl-3 col-lg-7 text-center">
+            <i class="fas fa-server fa-6x text-primary mb-2"></i>
         </div>
-        <div class="col-xl-8 col-lg-5">
+        <div class="col-xl-9 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4>Shoreline</h4>
-            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+            <h4>Backend aplikacji webowych</h4>
+            <p class="text-black-50 mb-0">Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django. Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django.Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django.</p>
           </div>
         </div>
       </div>
-
-      <!-- Project One Row -->
-      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-        <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+      <div class="additional-border"></div>
+      <div class="row align-items-center no-gutters mb-5 mb-lg-5">
+        <div class="col-xl-3 col-lg-7 text-center">
+            <img src="img/api_icon.svg" 
+            class="img-fluid"  alt="Responsive Image" 
+            width="120" height="120" /> 
         </div>
-        <div class="col-lg-6">
-          <div class="bg-black text-center h-100 project">
-            <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Misty</h4>
-                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
-                <hr class="d-none d-lg-block mb-0 ml-0">
-              </div>
+        <div class="col-xl-9 col-lg-5">
+          <div class="featured-text text-center text-lg-left">
+            <h4>Tworzenie API</h4>
+            <p class="text-black-50 mb-0">Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django.Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django.Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django. </p>
+          </div>
+        </div>
+      </div>
+      <div class="additional-border"></div>
+      <div class="row align-items-center no-gutters mb-5 mb-lg-5">
+        <div class="col-xl-3 col-lg-7 text-center">
+            <i class="fas fa-desktop fa-6x text-primary mb-2"></i>
+        </div>
+        <div class="col-xl-9 col-lg-5">
+          <div class="featured-text text-center text-lg-left">
+            <h4>Frontend aplikacji webowych</h4>
+            <p class="text-black-50 mb-0">Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django.Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django.Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django. </p>
+          </div>
+        </div>
+      </div>
+      <div class="additional-border"></div>
+      <div class="row align-items-center no-gutters mb-5 mb-lg-5">
+        <div class="col-xl-3 col-lg-7 text-center">
+            <i class="fas fa-database fa-6x text-primary mb-2"></i>
+        </div>
+        <div class="col-xl-9 col-lg-5">
+          <div class="featured-text text-center text-lg-left">
+            <h4>Bazy danych</h4>
+            <p class="text-black-50 mb-0">W mojej pracy cały czas mam do czynienia z bazami danych. Posiadam wiedzę na temat Postgresql, MySQL oraz nierelacyjnej bazdy danych MongoDB. Zajmuję się tworzeniem modeli danych oraz utrzymaniem baz danych. Posiadam średniozaawansowaną znajomośc języka SQL oraz najpopularniejszych systemów ORM.  </p>
+          </div>
+        </div>
+      </div>
+      <div class="additional-border"></div>
+      <div class="row align-items-center no-gutters mb-5 mb-lg-5">
+          <div class="col-xl-3 col-lg-7 text-center">
+              <img src="img/computer-graphic.svg" 
+              class="img-fluid"  alt="Responsive Image" 
+              width="120" height="120" /> 
+          </div>
+          <div class="col-xl-9 col-lg-5">
+            <div class="featured-text text-center text-lg-left">
+              <h4>Grafika komputerowa</h4>
+              <p class="text-black-50 mb-0">W wolnym czasie tworzę grafikę komputerową. Lubię tworzyć ciekawe kompozycje i uczyć się nowych technik. Jest to bardzo kreatywne i rozwijające zajęcie. Swoje projekty tworzę w programie Blender. Moje projekty są dostępne na <b><a href="https://www.cgtrader.com/paho1993">na moim profilu CGTrader</a></b>. Kikla przykładów mojej twórczości można zobaczyć poniżej :</p>
             </div>
           </div>
         </div>
-      </div>
+    
+ <div class="additional-border"></div>
 
-      <!-- Project Two Row -->
-      <div class="row justify-content-center no-gutters">
-        <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
-        </div>
-        <div class="col-lg-6 order-lg-first">
-          <div class="bg-black text-center h-100 project">
-            <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Mountains</h4>
-                <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
-                <hr class="d-none d-lg-block mb-0 mr-0">
-              </div>
-            </div>
+    <!-- Carousel slider -->
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="img/slider_photos/0001.png" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://www.publicdomainpictures.net/pictures/30000/velka/motor-boat-at-sea.jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://www.publicdomainpictures.net/pictures/30000/velka/motor-boat-at-sea.jpg" alt="Third slide">
           </div>
         </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
 
-    </div>
   </section>
-
-  <!-- Signup Section
-  <section id="signup" class="signup-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-10 col-lg-8 mx-auto text-center">
-
-          <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-          <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
-
-          <form class="form-inline d-flex">
-            <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address...">
-            <button type="submit" class="btn btn-primary mx-auto">Subscribe</button>
-          </form>
-
-        </div>
-      </div>
-    </div>
-  </section> -->
 
   <!-- Contact Section -->
   <section id="signup" class="contact-section bg-black">
@@ -154,7 +182,7 @@
 
       <div class="row">
 
-        <div class="col-md-4 mb-3 mb-md-0">
+        <div class="col-md-3 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fab fa-linkedin text-primary mb-2"></i>
@@ -167,7 +195,7 @@
         </div>
       </div>
 
-        <div class="col-md-4 mb-3 mb-md-0">
+        <div class="col-md-3 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-envelope text-primary mb-2"></i>
@@ -178,7 +206,7 @@
           </div>
         </div>
 
-        <div class="col-md-4 mb-3 mb-md-0">
+        <div class="col-md-3 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fab fa-facebook text-primary mb-2"></i>
@@ -188,9 +216,22 @@
               <a href="https://www.facebook.com/maciek.pacholak" target="_blank">facebook.com/maciek.pacholak</a>
             </div>
           </div>
-        </div>
+        </div>  
       </div>
  
+      <div class="col-md-3 mb-3 mb-md-0">
+          <div class="card py-4 h-100">
+            <div class="card-body text-center">
+              <i class="fab fa-github text-primary mb-2"></i>
+              <h4 class="text-uppercase m-0">Github</h4>
+              <hr class="my-4">
+              <div class="small text-black-50">
+              <a href="https://github.com/paho1993" target="_blank">github.com/paho1993</a>
+            </div>
+          </div>
+          </div>
+        </div>
+
       </div>
 
       <!-- <div class="social d-flex justify-content-center">
