--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
       </div>
       <div class="additional-border"></div>
       <div class="row align-items-center no-gutters mb-5 mb-lg-5">
-        <div class="col-xl-3 col-lg-7 text-center">
+        <div class="col-xl-3 col-lg-4 text-center">
             <img src="img/api_icon.svg" 
             class="img-fluid"  alt="Responsive Image" 
             width="120" height="120" /> 
         </div>
-        <div class="col-xl-9 col-lg-5">
+        <div class="col-xl-9 col-lg-8">
           <div class="featured-text text-center text-lg-left">
             <h4>Tworzenie API</h4>
             <p class="text-black-50 mb-0">Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django.Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django.Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django. </p>
@@ -112,10 +112,10 @@
       </div>
       <div class="additional-border"></div>
       <div class="row align-items-center no-gutters mb-5 mb-lg-5">
-        <div class="col-xl-3 col-lg-7 text-center">
+        <div class="col-xl-3 col-lg-4 text-center">
             <i class="fas fa-desktop fa-6x text-primary mb-2"></i>
         </div>
-        <div class="col-xl-9 col-lg-5">
+        <div class="col-xl-9 col-lg-8">
           <div class="featured-text text-center text-lg-left">
             <h4>Frontend aplikacji webowych</h4>
             <p class="text-black-50 mb-0">Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django.Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django.Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django. </p>
@@ -124,10 +124,10 @@
       </div>
       <div class="additional-border"></div>
       <div class="row align-items-center no-gutters mb-5 mb-lg-5">
-        <div class="col-xl-3 col-lg-7 text-center">
+        <div class="col-xl-3 col-lg-4 text-center">
             <i class="fas fa-database fa-6x text-primary mb-2"></i>
         </div>
-        <div class="col-xl-9 col-lg-5">
+        <div class="col-xl-9 col-lg-8">
           <div class="featured-text text-center text-lg-left">
             <h4>Bazy danych</h4>
             <p class="text-black-50 mb-0">W mojej pracy cały czas mam do czynienia z bazami danych. Posiadam wiedzę na temat Postgresql, MySQL oraz nierelacyjnej bazdy danych MongoDB. Zajmuję się tworzeniem modeli danych oraz utrzymaniem baz danych. Posiadam średniozaawansowaną znajomośc języka SQL oraz najpopularniejszych systemów ORM.  </p>
@@ -136,12 +136,12 @@
       </div>
       <div class="additional-border"></div>
       <div class="row align-items-center no-gutters mb-5 mb-lg-5">
-          <div class="col-xl-3 col-lg-7 text-center">
+          <div class="col-xl-3 col-lg-4 text-center">
               <img src="img/computer-graphic.svg" 
               class="img-fluid"  alt="Responsive Image" 
               width="120" height="120" /> 
           </div>
-          <div class="col-xl-9 col-lg-5">
+          <div class="col-xl-9 col-lg-8">
             <div class="featured-text text-center text-lg-left">
               <h4>Grafika komputerowa</h4>
               <p class="text-black-50 mb-0">W wolnym czasie tworzę grafikę komputerową. Lubię tworzyć ciekawe kompozycje i uczyć się nowych technik. Jest to bardzo kreatywne i rozwijające zajęcie. Swoje projekty tworzę w programie Blender. Moje projekty są dostępne na <b><a href="https://www.cgtrader.com/paho1993">na moim profilu CGTrader</a></b>. Kikla przykładów mojej twórczości można zobaczyć poniżej :</p>
@@ -158,10 +158,10 @@
             <img class="d-block w-100" src="img/slider_photos/0001.png" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="https://www.publicdomainpictures.net/pictures/30000/velka/motor-boat-at-sea.jpg" alt="Second slide">
+            <img class="d-block w-100" src="img/slider_photos/maciek.png" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="https://www.publicdomainpictures.net/pictures/30000/velka/motor-boat-at-sea.jpg" alt="Third slide">
+            <img class="d-block w-100" src="img/Paho (1).png" alt="Third slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
