--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4 mt-5">O mnie</h2>
-          <p class="text-white-50">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum fuga recusandae consequuntur facilis voluptatum quia beatae, ipsum similique distinctio veritatis quos omnis nostrum vero tempore! Sint totam repellendus dolor dicta.</p>
+          <h2 class="text-white mt-5">O mnie</h2>
+          <p class="text-white-50">Jestem absolwentem studiów technicznych, chcącym kontynuować swój rozwój w interesujących obszarach Informatyki. Obecnie od ponad roku zajmuję się programowaniem aplikacji internetowych. Jestem osobą ambitną, lubiącą pracować w zespole, poszukującą nowych wyzwań i zadań. Szybko się uczę i zawsze staram się podchodzić do zadań z maksymalnym zaangażowaniem. Interesuję się nowymi technologiami, podróżowaniem (podczas studiów wziąłem udział w programach Work and Travel USA oraz Erasmus + w Portugalii), poznawaniem nowych kultur i ludzi, rozwojem osobistym oraz muzyką.</p>
         </div>
       </div>
     </div>
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="projects-section bg-light mt-5">
+  <section id="projects" class="projects-section bg-light">
 
-      <div class="text-center mb-5 mt-5">
+      <div class="text-center mb-5">
           <h3>Czym się zajmuję :</h3>
       </div>
       <div class="additional-border"></div>
@@ -92,7 +92,7 @@
         <div class="col-xl-9 col-lg-5">
           <div class="featured-text text-center text-lg-left">
             <h4>Backend aplikacji webowych</h4>
-            <p class="text-black-50 mb-0">Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django. Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django.Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django.</p>
+            <p class="text-black-50 mb-0">Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django. W swojej dotychczasaowej pracy zajmowałem się między innymi: proponowaniem sposobów implementacji nowych rozwiązań oraz utrzymania i wsparcia dla wdrożonych projektów na róznych fazach ukończenia, dynamicznym generowaniem dokumentów czy crawlingiem sieci. </p>
           </div>
         </div>
       </div>
@@ -106,7 +106,7 @@
         <div class="col-xl-9 col-lg-8">
           <div class="featured-text text-center text-lg-left">
             <h4>Tworzenie API</h4>
-            <p class="text-black-50 mb-0">Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django.Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django.Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django. </p>
+            <p class="text-black-50 mb-0">Posiadam wiedzę teoretyczną i praktyczną na temat projektowania oraz implementacji API dla aplikacji webowych. Mam doświadczenie w tworzeniu customowego prywatnego API, posiadającego system autentykacji oraz autoryzacji użytkowników na poziomie endpointów oraz obiektów .</p>
           </div>
         </div>
       </div>
@@ -118,7 +118,7 @@
         <div class="col-xl-9 col-lg-8">
           <div class="featured-text text-center text-lg-left">
             <h4>Frontend aplikacji webowych</h4>
-            <p class="text-black-50 mb-0">Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django.Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django.Zajmuję się tworzeniem backendowej storny aplikacji internetowych. Pracuje głównie w języku Python, wykorzystując bibliotekę Django. </p>
+            <p class="text-black-50 mb-0">Potrafię projektować i tworzyć średniozaawansowane widoki stron internetowych. Posiadam podstawową wiedzę na temat HTML, CSS, SCSS oraz frameworków dedykowanych do tworzenia "frontendu".</p>
           </div>
         </div>
       </div>
@@ -161,7 +161,16 @@
             <img class="d-block w-100" src="img/slider_photos/maciek.png" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/Paho (1).png" alt="Third slide">
+            <img class="d-block w-100" src="img/slider_photos/0041.png" alt="Third slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/slider_photos/fence.png" alt="Fourth slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/slider_photos/room.png" alt="Fifth slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/slider_photos/tire.png" alt="Sixth slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -233,19 +242,6 @@
         </div>
 
       </div>
-
-      <!-- <div class="social d-flex justify-content-center">
-        <a href="#" class="mx-2">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="#" class="mx-2">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="#" class="mx-2">
-          <i class="fab fa-github"></i>
-        </a>
-      </div> -->
-
     </div>
   </section>
 
