--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="scss/grayscale.css" rel="stylesheet">
+  <link href="css/grayscale.min.css" rel="stylesheet">
 
 </head>
 
@@ -261,8 +261,8 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/grayscale.min.js"></script>
-  <script src="js/particles.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/particles.min.js"></script>
+  <script src="js/app.min.js"></script>
 
 </body>
 
