--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <div class="col-xl-9 col-lg-8">
             <div class="featured-text text-center text-lg-left">
               <h4>Grafika komputerowa</h4>
-              <p class="text-black-50 mb-0">W wolnym czasie tworzę grafikę komputerową. Lubię tworzyć ciekawe kompozycje i uczyć się nowych technik. Jest to bardzo kreatywne i rozwijające zajęcie. Swoje projekty tworzę w programie Blender. Moje projekty są dostępne na <b><a href="https://www.cgtrader.com/paho1993">na moim profilu CGTrader</a></b>. Kikla przykładów mojej twórczości można zobaczyć poniżej :</p>
+              <p class="text-black-50 mb-0">W wolnym czasie tworzę grafikę komputerową. Lubię tworzyć ciekawe kompozycje i uczyć się nowych technik. Jest to bardzo kreatywne i rozwijające zajęcie. Swoje projekty tworzę w programie Blender. Moje projekty są dostępne na <b><a href="https://www.cgtrader.com/paho1993">na moim profilu CGTrader</a></b>. Kilka przykładów mojej twórczości można zobaczyć poniżej :</p>
             </div>
           </div>
         </div>
