--- a/index.html
+++ b/index.html
@@ -155,22 +155,22 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="img/slider_photos/0001.png" alt="First slide">
+            <img class="d-block w-100" src="img/slider_photos/0001.jpg" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/slider_photos/maciek.png" alt="Second slide">
+            <img class="d-block w-100" src="img/slider_photos/maciek.jpg" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/slider_photos/0041.png" alt="Third slide">
+            <img class="d-block w-100" src="img/slider_photos/0041.jpg" alt="Third slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/slider_photos/fence.png" alt="Fourth slide">
+            <img class="d-block w-100" src="img/slider_photos/fence.jpg" alt="Fourth slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/slider_photos/room.png" alt="Fifth slide">
+            <img class="d-block w-100" src="img/slider_photos/room.jpg" alt="Fifth slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/slider_photos/tire.png" alt="Sixth slide">
+            <img class="d-block w-100" src="img/slider_photos/tire.jpg" alt="Sixth slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
