feat: added javascript functions

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="This is Maciej Pacholak personal website">
+  <meta name="author" content="Maciej Pacholak">
 
   <title>Maciej Pacholak</title>
 
@@ -48,7 +48,6 @@
       </div>
     </div>
   </nav>
-
  
   <!-- Header -->
   <section class="masthead">
@@ -68,14 +67,19 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mt-5">O mnie</h2>
+          <p class="text-white-50" id="hi"></p>
           <p class="text-white-50">Jestem absolwentem studiów technicznych, chcącym kontynuować swój rozwój w interesujących obszarach Informatyki. Obecnie od ponad roku zajmuję się programowaniem aplikacji internetowych. Jestem osobą ambitną, lubiącą pracować w zespole, poszukującą nowych wyzwań i zadań. Szybko się uczę i zawsze staram się podchodzić do zadań z maksymalnym zaangażowaniem. Interesuję się nowymi technologiami, podróżowaniem (podczas studiów wziąłem udział w programach Work and Travel USA oraz Erasmus + w Portugalii), poznawaniem nowych kultur i ludzi, rozwojem osobistym oraz muzyką.</p>
         </div>
       </div>
     </div>
   </section>
 
+
   <!-- Projects Section -->
   <section id="projects" class="projects-section bg-light">
+
+      <a href="#pl" data-reload >Polski</a>
+      <a href="#eng" data-reload >English</a>
 
       <div class="text-center mb-5">
           <h3>Czym się zajmuję :</h3>
@@ -263,6 +267,7 @@
   <script src="js/grayscale.min.js"></script>
   <script src="js/particles.min.js"></script>
   <script src="js/app.min.js"></script>
+  <script src="js/lang.js"></script>
 
 </body>
 
