imported flag icons and added navbar language change

--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#signup">Kontakt</a>
           </li>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="index_eng.html">Angielski</a>
-        </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index_eng.html">Angielski</a>
+          </li>
         </ul>
       </div>
     </div>
