--- a/index_eng.html
+++ b/index_eng.html
@@ -36,16 +36,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">O mnie</a>
+            <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Doświadczenie</a>
+            <a class="nav-link js-scroll-trigger" href="#projects">Experience</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#signup">Kontakt</a>
+            <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html">Polish</a>
+            <a class="nav-link" href="index.html">Polish</a>
           </li>
         </ul>
       </div>
@@ -69,7 +69,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mt-5">O mnie</h2>
+          <h2 class="text-white mt-5">About me</h2>
           <p class="text-white-50">Jestem absolwentem studiów technicznych, chcącym kontynuować swój rozwój w interesujących obszarach Informatyki. Obecnie od ponad roku zajmuję się programowaniem aplikacji internetowych. Jestem osobą ambitną, lubiącą pracować w zespole, poszukującą nowych wyzwań i zadań. Szybko się uczę i zawsze staram się podchodzić do zadań z maksymalnym zaangażowaniem. Interesuję się nowymi technologiami, podróżowaniem (podczas studiów wziąłem udział w programach Work and Travel USA oraz Erasmus + w Portugalii), poznawaniem nowych kultur i ludzi, rozwojem osobistym oraz muzyką.</p>
         </div>
       </div>
