added flag icons to change the language

--- a/index.html
+++ b/index.html
@@ -44,10 +44,8 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#signup">Kontakt</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index_eng.html">Angielski</a>
-          </li>
         </ul>
+        <a class="navbar-brand js-scroll-trigger ml-lg-5" href="index_eng.html">  <img src="img/usa_flag.png" width="30" height="30" class="d-inline-block align-top" alt=""></a>
       </div>
     </div>
   </nav>
