--- a/index_eng.html
+++ b/index_eng.html
@@ -44,10 +44,8 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Polish</a>
-          </li>
         </ul>
+        <a class="navbar-brand js-scroll-trigger ml-lg-5" href="index.html">  <img src="img/poland_flag.png" width="30" height="30" class="d-inline-block align-top" alt=""></a>
       </div>
     </div>
   </nav>
