--- a/index_eng.html
+++ b/index_eng.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="This is Maciej Pacholak personal website">
   <meta name="author" content="Maciej Pacholak">
-
+  <link rel="shortcut icon" href="img/maciek_avatar.jpg">
   <title>Maciej Pacholak</title>
 
   <!-- Bootstrap core CSS -->
