--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="This is Maciej Pacholak personal website">
   <meta name="author" content="Maciej Pacholak">
   <link rel="shortcut icon" href="img/maciek_avatar.jpg">
+  <meta property="og:image" content="http://maciejpacholak.pl/img/maciek_avatar.jpg" />
   <title>Maciej Pacholak</title>
 
   <!-- Bootstrap core CSS -->
