improved Front-end english description

--- a/index_eng.html
+++ b/index_eng.html
@@ -120,7 +120,7 @@
         <div class="col-xl-9 col-lg-8">
           <div class="featured-text text-center text-lg-left">
             <h4>Web apllication front-end development</h4>
-            <p class="text-black-50 mb-0">I can design and create website views. I have basic knowledge of HTML, CSS, SCSS languages as well as Vue.js and React web frameworks. </p>
+            <p class="text-black-50 mb-0">I can design and create website views. I'am albe to make visually appealing, UX friendly and responsive webpages. I have basic knowledge of HTML, CSS, SCSS languages as well as Vue.js and React web frameworks. </p>
           </div>
         </div>
       </div>
